--- a/templates/canvas/calendar.html
+++ b/templates/canvas/calendar.html
@@ -1,5 +1,6 @@
 {% extends 'canvas/base.html' %}
 {% load static %}
+{% load user_timezone %}
 
 {% block title %}Calendar | GradeBench Canvas{% endblock %}
 {% block page_title %}Course Calendar{% endblock %}
@@ -16,9 +17,9 @@
         <li class="list-group-item">
           <strong>{{ ev.title }}</strong><br>
           {% if ev.all_day %}
-            All day on {{ ev.start_at|date:"M j, Y" }}
+            All day on {{ ev.start_at|user_timezone:user|date:"M j, Y" }}
           {% else %}
-            {{ ev.start_at|date:"M j, Y, P" }} – {{ ev.end_at|date:"P" }}
+            {{ ev.start_at|user_timezone:user|date:"M j, Y, P" }} – {{ ev.end_at|user_timezone:user|date:"P" }}
           {% endif %}
           {% if ev.description %}
             <p>{{ ev.description|safe }}</p>
