--- a/templates/canvas/quizzes_list.html
+++ b/templates/canvas/quizzes_list.html
@@ -1,5 +1,6 @@
 {% extends 'canvas/base.html' %}
 {% load static %}
+{% load user_timezone %}
 
 {% block title %}Canvas Quizzes | GradeBench{% endblock %}
 {% block page_title %}Canvas Quizzes{% endblock %}
@@ -59,7 +60,7 @@
                                         </td>
                                         <td>
                                             {% if quiz.due_at %}
-                                            {{ quiz.due_at|date:"M d, Y" }}
+                                            {{ quiz.due_at|user_timezone:user|date:"M d, Y" }}
                                             {% else %}
                                             No due date
                                             {% endif %}
