--- a/templates/canvas/student_detail.html
+++ b/templates/canvas/student_detail.html
@@ -1,5 +1,6 @@
 {% extends 'canvas/base.html' %}
 {% load static %}
+{% load user_timezone %}
 
 {% block title %}{{ enrollment.user_name }} | {{ course.course_code }} | GradeBench Canvas{% endblock %}
 {% block page_title %}{{ enrollment.user_name }}{% endblock %}
@@ -173,7 +174,7 @@
                             </td>
                             <td>
                                 {% if submission.submitted_at %}
-                                {{ submission.submitted_at|date:"M d, Y H:i" }}
+                                {{ submission.submitted_at|user_timezone:user|date:"M d, Y H:i" }}
                                 {% else %}
                                 --
                                 {% endif %}
@@ -232,7 +233,7 @@
                                 <th>Last Activity</th>
                                 <td>
                                     {% if enrollment.last_activity_at %}
-                                    {{ enrollment.last_activity_at|date:"F d, Y H:i" }}
+                                    {{ enrollment.last_activity_at|user_timezone:user|date:"F d, Y H:i" }}
                                     {% else %}
                                     Never
                                     {% endif %}
