--- a/templates/core/dashboard_profile.html
+++ b/templates/core/dashboard_profile.html
@@ -1,4 +1,5 @@
 {% extends 'base_dashboard.html' %}
+{% load user_timezone %}
 
 {% block title %}Profile - GradeBench{% endblock %}
 {% block page_title %}User Profile{% endblock %}
@@ -24,7 +25,7 @@
                     {% if profile.github_username %}
                     GitHub: {{ profile.github_username }}<br>
                     {% endif %}
-                    Joined: {{ user.date_joined|date:"F j, Y" }}
+                    Joined: {{ user.date_joined|user_timezone:user|date:"F j, Y" }}
                 </p>
             </div>
             <div class="card-footer">
